--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
-    "sweetalert2": "^11.7.20",
+    "imask": "^7.1.3",
+    "sweetalert2": "^11.6.13",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
