Formulario Estabelecimento Ok

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prj_imommy",
+  "name": "prj_renegade",
   "version": "0.1.0",
   "description": "front-end do projeto Renegades",
   "private": true,
